testcases/compiler2015/Phase2/CompileError/lvalue1-5110379024-wuhang.c
/** REMARK: Function return value has no address.
 *
**/

int gg()
{
    int c=0;
    return c;
}
int main()
{
    int *p=&gg();
}
